[gd_scene load_steps=4 format=2]

[ext_resource path="res://Asset/made asset/Menu_UI/MenuOption_UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Asset/made asset/Menu_UI/PauseMenu_UI.gd" type="Script" id=2]
[ext_resource path="res://Asset/made asset/Menu_UI/MenuHeader_UI.tscn" type="PackedScene" id=3]


[node name="Pause Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
saveScene = "res://asset/made asset/Menu_UI/SaveMenu.tscn"
loadScene = "res://asset/made asset/Menu_UI/LoadMenu.tscn"
optionScene = "res://asset/made asset/Menu_UI/OptionsMenu.tscn"
mainMenuScene = "res://asset/made asset/Menu_UI/SaveMenu.tscn"

[node name="BaseMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="MenuTitle" parent="BaseMenu" instance=ExtResource( 3 )]
margin_left = 32.0
margin_top = 5.0
margin_right = 32.0
margin_bottom = 5.0

[node name="Panel" parent="BaseMenu/MenuTitle/HBoxContainer/Line" index="0"]
margin_left = -15.0
margin_right = 28.0
rect_min_size = Vector2( 43, 0.65 )

[node name="Setting" parent="BaseMenu/MenuTitle/HBoxContainer/Setting" index="0"]
text = "Pause"

[node name="HBoxContainer" type="VBoxContainer" parent="BaseMenu"]
margin_left = 28.0
margin_top = 52.0
margin_right = 28.0
margin_bottom = 112.0
custom_constants/separation = 12

[node name="Resume" parent="BaseMenu/HBoxContainer" instance=ExtResource( 1 )]

[node name="Save Game" parent="BaseMenu/HBoxContainer" instance=ExtResource( 1 )]
margin_top = 12.0
margin_bottom = 12.0

[node name="Label" parent="BaseMenu/HBoxContainer/Save Game" index="0"]
text = "Save Game"

[node name="Button" parent="BaseMenu/HBoxContainer/Save Game/Label" index="0"]
margin_right = 42.0

[node name="Load Game" parent="BaseMenu/HBoxContainer" instance=ExtResource( 1 )]
margin_top = 24.0
margin_bottom = 24.0

[node name="Label" parent="BaseMenu/HBoxContainer/Load Game" index="0"]
text = "Load Game
"

[node name="Button" parent="BaseMenu/HBoxContainer/Load Game/Label" index="0"]
margin_right = 44.0

[node name="Options" parent="BaseMenu/HBoxContainer" instance=ExtResource( 1 )]
margin_top = 36.0
margin_bottom = 36.0

[node name="Label" parent="BaseMenu/HBoxContainer/Options" index="0"]
text = "Options"

[node name="Quit to Menu" parent="BaseMenu/HBoxContainer" instance=ExtResource( 1 )]
margin_top = 48.0
margin_bottom = 48.0

[node name="Label" parent="BaseMenu/HBoxContainer/Quit to Menu" index="0"]
text = "Quit to Menu"

[node name="Button" parent="BaseMenu/HBoxContainer/Quit to Menu/Label" index="0"]
margin_right = 52.0

[node name="Quit to Desktop" parent="BaseMenu/HBoxContainer" instance=ExtResource( 1 )]
margin_top = 60.0
margin_bottom = 60.0

[node name="Label" parent="BaseMenu/HBoxContainer/Quit to Desktop" index="0"]
text = "Quit to Desktop"

[node name="Button" parent="BaseMenu/HBoxContainer/Quit to Desktop/Label" index="0"]
margin_right = 63.0

[node name="Popup" type="Popup" parent="BaseMenu"]
visible = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="BaseMenu/Popup"]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="pressed" from="BaseMenu/HBoxContainer/Resume/Label/Button" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="BaseMenu/HBoxContainer/Save Game/Label/Button" to="." method="_on_saveGame_pressed"]
[connection signal="pressed" from="BaseMenu/HBoxContainer/Load Game/Label/Button" to="." method="_on_loadGame_pressed"]
[connection signal="pressed" from="BaseMenu/HBoxContainer/Options/Label/Button" to="." method="_on_options_pressed"]
[connection signal="pressed" from="BaseMenu/HBoxContainer/Quit to Menu/Label/Button" to="." method="_on_quitToMenu_pressed"]
[connection signal="pressed" from="BaseMenu/HBoxContainer/Quit to Desktop/Label/Button" to="." method="_on_quitToDesktop_pressed"]

[editable path="BaseMenu/MenuTitle"]
[editable path="BaseMenu/HBoxContainer/Resume"]
[editable path="BaseMenu/HBoxContainer/Save Game"]
[editable path="BaseMenu/HBoxContainer/Load Game"]
[editable path="BaseMenu/HBoxContainer/Options"]
[editable path="BaseMenu/HBoxContainer/Quit to Menu"]
[editable path="BaseMenu/HBoxContainer/Quit to Desktop"]
